2002-11-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (BroadcastRestack):
	split long packets, fixed a bug and cleaned up

	* libs/Module.c (ReadFvwmPacket):
	ignore packets that are too long

2002-11-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS:
	* configure.in:
	increased version to 2.4.14

	* fvwm/fvwm2.1:
	* NEWS:
	updated for 2.4.13

2002-10-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/bindings.c (activate_binding):
	fixed problem w/ bindings being overridden by applications OpenOffice
	and the Gnome panel

2002-10-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (restack_windows):
	(__get_stacking_sibling):
	fixed another stacking problem

2002-10-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (AddWindow):
	braodcast M_RESTACK_WINDOW after M_ADD_WINDOW to fix problem with
	windows starting lowered or on other layers in FvwmPager

	* fvwm/stack.c (restack_windows):
	(__get_visible_window):
	fixed a stacking problem with layers

2002-10-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (mark_transient_subtree):
	fixed stack ring corruption with iconified transients
	(restack_windows):
	fixed a problem with lowering windows below the icons of their
	transients
	(__RaiseOrLowerWindow):
	fixed a problem with StackTransientParent

2002-10-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (__restack_window):
	fixed a stacking problem with icons
	(restack_windows):
	fixed flickering when raising transients; can't prevent flickering when
	lowering a window completely

2002-10-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/conditional.c (Circulate):
	(CMD_All):
	(CMD_Pick):
	Current, All, Pick, ThisWindow and PointerWindow imply the
	CirculateHitShaded condition.

2002-10-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (destroy_icon):
	fixed duplicate icon pixmap when switching from NoIconOverride to
	IconOverride

2002-10-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (AutoPlaceIcon):